--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: cloudvault
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
+    startCommand: gunicorn app:app
     plan: free
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.4
+      - key: FLASK_ENV
+        value: production
