--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,13 @@ services:
   - type: web
     name: cloudvault
     env: python
+    plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
-    plan: free
     envVars:
-      - key: FLASK_ENV
-        value: production
+      - key: CLOUDINARY_URL
+        sync: false
+      - key: SECRET_KEY
+        sync: false
+      - key: DATABASE_URL
+        sync: false
